[tool.poetry]
name = "05-fastapi-containerization"
version = "0.1.0"
description = ""
authors = ["RidaNaz <rnaz3414@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
